sumo/tests/traci/ChangeTLValue/errors/UnknownTL/testclient.prog
simstep2 48
setvalue 0xc2 0x22 xxx <string> dummy
simstep2 49
